<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_Element"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@color/green"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_NamePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1. Название продукта"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_TitleLaunchPrice"
                android:text="@string/launch_price"
                style="@style/RecycleTextView"/>

            <TextView
                android:id="@+id/tv_PricePhone"
                android:text=" $1299"
                style="@style/RecycleTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_TitleLaunchDate"
                android:text="@string/launch_date"
                style="@style/RecycleTextView"/>

            <TextView
                android:id="@+id/tv_DatePhone"
                android:text=" Сентябрь, 2022"
                style="@style/RecycleTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_TitleCameraScore"
                android:text="@string/camera_score"
                style="@style/RecycleTextView"/>

            <TextView
                android:id="@+id/tv_ScorePhone"
                android:text=" 149"
                style="@style/RecycleTextView"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>